# GPTeam

./: .gitignore  AGI discussion.txt  README.md  changelog.txt  config-aitopic.json  config-environmentcrisis.json  config-gossip.json  config-jungleLASTversion.json  config-krakow.json  config-manipulation.json  config.json  config26092024.json  database.db-shm  database.db-wal  debate_log_20241029_121419.json  debate_visualizer.py  error_analysis.txt  first round.txt  influence25092024.txt  kepler.json  log.txt  log26092024.txt  pyproject.toml  requirements.txt  setup.py  simulation9onSept262024.md  simulationCONTROL926092024.md  speech_app.py  speech_generator.py
.streamlit/: config.toml
agents-0copy/: Marty.txt  Rebecca.txt  Ricardo.txt
agentsJune06/: Anna Paola.txt  Denisa.txt  Paulo.txt
agentsJune506/: Anna Paola.txt  Denisa.txt  Paulo.txt  logofsimulation5June
src/: analyze_debate.py  main.py
src/agent/: README.md  __init__.py  agent_base.py  agent_db.py  agent_file.py  agent_memory.py  agent_movement.py  agent_planning.py  agent_reflection.py  base-origin.py  base.py  conversation_state.py  executor archive.py  executor-change.txt  executor.py  message.py  parser_utils.py  plans.py  react.py
src/location/: base.py
src/tools/: base.py  document.py  human.py  search.py  send_message.py  user_input.py  wait.py
src/utils/: embeddings.py  formatting.py  input.py  logging.py  model_name.py  models.py  parameters.py  prompt.py  prompt2609.py  spinner.py
src/web/: README.md  __init__.py  debate_report.py  discussion_tracker.py  streamlit_app.py
(+7 files in other folders)
