[tool.poetry]
name = "101-ai"
version = "0.1.0"
description = ""
authors = []
readme = "README.md"
packages = [{include = "src"}, {include = "web", from = "src"}]

[tool.poetry.scripts]
world = "src.main:main"
db-seed = "src.utils.database.seed:main"
db-seed-small = "src.utils.database.seed:main_small"
db-reset = "src.utils.database.reset:main"

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
aiosqlite = "^0.19.0"
anthropic = "^0.2.10"
black = "^23.3.0"
colorama = "^0.4.6"
google-search-results = "^2.4.2"
hikari = "^2.0.0.dev118"
hyperdb-python = "^0.1.3"
langchain = "^0.0.352"
langchain-openai = "^0.0.2"
openai = "^1.48.0"
postgrest-py = "^0.10.6"
python-dotenv = "^1.0.0"
pytz = "^2023.3"
quart = "^0.18.4"
supabase = "^1.0.3"
websocket-client = "^1.5.2"
Werkzeug = "2.2.2"
wolframalpha = "^5.0.0"
toml = "^0.10.2"

[tool.black]
line-length = 88

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.openai]
base_url = "https://api.openai.com/v1"
# base_url = "https://openrouter.ai/api/v1"